# protocol

./: .eslintignore  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Anchor.toml  CHANGELOG.md  LICENSE  README.md  index.ts  next.config.js  package-lock.json  package.json  run-dev-local.sh  tailwind.config.js  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  webpack.config.js
.github/workflows/: anchor.yml  formatters.yml  main.yaml
api/: index.js  index.ts  proto2.ts
components/Button/: index.jsx  index.tsx
components/Footer/: index.jsx  index.tsx
components/Home/: index.jsx  index.tsx
components/Landing/: index.jsx  index.tsx
components/Menu/: index.jsx  index.tsx
components/Messages/: MessageInput.jsx  MessageInput.tsx  MessageMember.jsx  MessageMember.tsx  MessagePreview.jsx  MessagePreview.tsx  Thread.jsx  (+13 more)
docker/: Dockerfile  Dockerfile.tests
docs/: README.md
examples/: hello-world.ts  index.ts  on-new-user.ts  welcome-message.ts
pages/: _app.jsx  _app.tsx  _document.jsx  _document.tsx  index.jsx  index.tsx
programs/dialect/: Cargo.toml
programs/dialect/src/: lib.rs
scripts/: _base-dir.js  update-localnet-address.js  update-program-address.js
src/: index.ts
styles/: globals.css
tests/: proto2.test.ts  test-mint-v1.ts  test-v0.ts  test-v1.ts  test.js  test.ts
utils/: ApiContext.jsx  ApiContext.tsx  DarkModeContext.jsx  DarkModeContext.ts  DarkModeContext.tsx  WalletContext.jsx  WalletContext.tsx  dialect.json  index.js  index.ts  programs.json
(+55 files in other folders)
